[package]
name = "demo"
version = "0.1.0"
description = " Rust web demo based on iron"
readme = "README.md"
repository = "https://github.com/hikelee/rust-web-demo"
license = "MIT"
authors = [
    "Hike Li <hikelee@gmail.com>"
]

[[bin]]
doc=false
name= "app"
path="src/main.rs"

[dependencies]
rand="0.3.14"
hyper="*"
chrono= { version="0.2.2",features = ["rustc-serialize"]}
term="0.4.4"
iron="0.3"
time="0.1.35"
postgres = { version = "0.11.9", features = ["chrono"] }
r2d2_postgres="0.10.1"
r2d2="0.7.0"
router="0.1.1"
mount = "0.1.0"
staticfile="0.2.0"
handlebars-iron="0.15.3"
rustc-serialize = "0.3.19"
persistent="0.1.0"
urlencoded="0.3"
cookie="0.2.5"
iron-login="0.4.1"
rust-crypto = "0.2.36"
regex="0.1.71"
lazy_static = "0.1.*"
config = "~0.1.0"
redis="0.5.4"
r2d2_redis="0.3.1"
bincode = "0.5.8"
log="0.3.6"
env_logger="0.3.3"
